[tool.poetry]
name = "apipull"
version = "0.1.0"
description = ""
authors = ["sovwva <sovwva7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
pylint-flask = "^0.6"
pytest-flask = "^1.3.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
