[tool.poetry]
name = "apipull"
version = "0.1.0"
description = ""
authors = ["sovwva <sovwva7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
aiohttp = "^3.10.10"
httpx = "^0.27.2"
aiosqlite = "^0.20.0"
pydantic = "^2.9.2"
loguru = "^0.7.2"
jsonschema = "^4.23.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
